Fix padding style error on firefox

--- a/stylesheet/main.less
+++ b/stylesheet/main.less
@@ -5,7 +5,6 @@ html, body {
     padding     : 0;
     overflow    : hidden;
 }
-
 //  ---------------------------------------------------------------------
 //  Main classes
 //  ---------------------------------------------------------------------
@@ -45,7 +44,7 @@ html, body {
     box-shadow      : 0 0 3px #ccc;
     border          : 1px #ddd solid;
     border-radius   : 0!important;
-    padding-left    : 15px;
+    //padding-left    : 15px;
 }
 
 fa { font-family: FontAwesome !important; }
